manifests/setlist-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setlist-search-deployment
  labels:
    app: setlist-search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: setlist-search
      tier: web
  template:
    metadata:
      labels:
        app: setlist-search
        tier: web
    spec:
      containers:
      - name: setlist-search
        image: gcr.io/setlist-searcher/setlist-search:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
      volumes:
      - name: google-cloud-key
        secret:
          secretName: indexer-key
---
apiVersion: v1
kind: Service
metadata:
  name: setlist-search
  labels:
    app: setlist-search
spec:
  selector:
    app: setlist-search
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
